--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "stylelint-scss": "^5.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3"
   }
